--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,11 +86,17 @@ html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
+    height: 100%;
+    
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
+
+#__next{    
+    height: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
