design : 웹폰트 적용. feat : 글쓰기 - DaumPostcodeEmbed 라이브러리 추가 및 모달 추가. feat : 페이지네이션 - 검색바 추가. feat : 디테일 - 코멘트 리스트 구현. feat : 디테일 - 좋아요 싫어요 버튼 구현. faet : 코드젠 라이브러리 추가.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+
 :root {
     --max-width: 1100px;
     --border-radius: 12px;
@@ -80,6 +82,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 }
 
 html,
